# aws-nitro-util

./: .gitignore  CODEOWNERS  LICENSE  README.md  SECURITY.md  flake.nix  initc.nix  initgo.nix  nitroKernelModule.nix
.github/workflows/: check.yml
eif-cli/: Cargo.toml
eif-cli/src/: main.rs
eif_build/: package.nix
examples/: README.md  bringYourOwnKernel.nix  flake.nix  withCrossCompilation.nix  withShellScript.nix  withYourInit.nix
examples/bringYourOwnKernel/: flake.nix
examples/bringYourOwnKernel/init/: init.go
init/: README.md  default.nix  go.mod  init.c  init.go
